# odroid-c4-cluster

./: .gitignore  CLAUDE.md  CLUSTER-GUIDE.md  CONTRIBUTING.md  README.md  SECURITY.md  circuit-zoo.nix  configuration.nix  deploy-all-nodes.sh  distribute-cluster-keys.sh  dns-forwarder.nix  flake.nix  flash-with-towboot.sh  gitops.nix  hardware-configuration.nix  k3s.nix  monitoring.nix  odroid-C4-2023.07-007.tar.xz  pqcoin.nix  setup-distributed-builds.sh
circuit-zoo/: Cargo.toml  README.md  analyze.py  cluster-status.sh  schema.sql  setup-postgres.sh  visualize.py
circuit-zoo/src/: main.rs
k8s/: nfs-provisioner.yaml
k8s/blocky/: README.md  configmap.yaml  daemonset.yaml  service.yaml
k8s/examples/: README.md  nfs-test.yaml  whoami-app.yaml
odroid-C4-2023.07-007/config/: mmcboot.config  noenv.config
