[package]
name = "circuit_zoo"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10"
dashmap = "6"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hostname = "0.4"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
